--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Neparica Technology</title>
+		<title>RubySource User Auth</title>
 		<%= stylesheet_link_tag    "application", :media => "all" %>
 		<%= javascript_include_tag "application" %>
 		<%= csrf_meta_tags %>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<nav class="navbar navbar-default" role="navigation">
@@ -22,70 +21,65 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<%unless session[:user_id]%>
 				<ul class="nav navbar-nav">
-					<li class="active">
-						<a href="#">Link</a>
+
+					<li>
+						<%= link_to :Signup , :signup %>
 					</li>
 					<li>
-						<a href="#">Link</a>
+						<%= link_to :Login , :login %>
 					</li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="#">Action</a>
-							</li>
-							<li>
-								<a href="#">Another action</a>
-							</li>
-							<li>
-								<a href="#">Something else here</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">Separated link</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">One more separated link</a>
-							</li>
-						</ul>
-					</li>
+
 				</ul>
-				<form class="navbar-form navbar-left" role="search">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
-					</div>
-					<button type="submit" class="btn btn-default">
-						Submit
-					</button>
-				</form>
-				<ul class="nav navbar-nav navbar-right">
+				<%else%>
+				<ul class="nav nav navbar-nav">
 					<li>
-						<a href="#">Link</a>
+						<%= link_to :"All Post" , :allpost %>
 					</li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="#">Action</a>
-							</li>
-							<li>
-								<a href="#">Another action</a>
-							</li>
-							<li>
-								<a href="#">Something else here</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">Separated link</a>
-							</li>
-						</ul>
+					<li>
+						<%= link_to :Home , :home %>
+					</li>
+					<li>
+						<%= link_to :Profile , :profile %>
+					</li>
+					<li>
+						<%= link_to :Setting , :setting %>
+					</li>
+					<li>
+						<%= link_to :Logout , :logout %>
 					</li>
 				</ul>
+				<%end%>
+
 			</div><!-- /.navbar-collapse -->
 		</nav>
-		<%= yield %>
+
+		<div class="Main_Header">
+
+		</div>
+		<% if flash[:color]== "valid" %>
+		<div class="valid_notice">
+			<p>
+				<%= flash[:notice]%>
+			</p>
+		</div>
+		<% elsif flash[:color]== "invalid"%>
+		<div class="invalid_notice">
+			<p>
+				<%= flash[:notice]%>
+			</p>
+		</div>
+		<%else%>
+		<div class="notice">
+			<p>
+				<%= flash[:notice]%>
+			</p>
+		</div>
+		<%end%>
+		<div class="container">
+			<%= yield %>
+		</div>
 
 	</body>
 </html>
